# cfundata

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  sha256.py  upload_modelscope.py
.github/workflows/: test.yml
docs/: index.md
src/cfundata/: __init__.py  utils.py
src/cfundata/data/: dx_cls.onnx  dx_cls.pt  dx_det.onnx  dx_det.pt  frequency.parquet  frequency2.parquet  gt3_word_cls.onnx  gt3_word_det.onnx  sfz_det.onnx  sha256.json  simsun.ttc
tests/: test_all.py
